--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 anyio==3.6.2
 certifi==2022.12.7
+chardet==3.0.4
 charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
 fastapi==0.92.0
-h11==0.14.0
-idna==3.4
+h11==0.8.1
+h2==3.2.0
+hpack==3.0.0
+http3==0.6.7
+hyperframe==5.2.0
+idna==2.10
 pydantic==1.10.7
 pymongo==4.3.3
+pytz==2023.3
 requests==2.28.2
+requests-async==0.6.2
+rfc3986==1.5.0
 sniffio==1.3.0
 starlette==0.25.0
 typing_extensions==4.5.0
