--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
 fastapi==0.92.0
-h11==0.8.1
+h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 http3==0.6.7
+httpcore==0.16.3
+httpx==0.23.3
 hyperframe==5.2.0
 idna==2.10
 pydantic==1.10.7
